DeveloperOrg/force-app/main/default/objects/zip_code_assigment__c/zip_code_assigment__c.object-meta.xml
<CustomObject>
    <label>zip code assigment</label>
    <nameField>
        <label>zip code assigment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zip code assigment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>