DeveloperOrg/force-app/main/default/objects/zip_code_assigment__c/fields/sync_account_Lead__c.field-meta.xml
<CustomField>
    <fullName>sync_account_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sync account/Lead</label>
    <type>Checkbox</type>
</CustomField>