DeveloperOrg/force-app/main/default/objects/zip_code_assigment__c/fields/Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Manager</label>
    <referenceTo>Territory_Manager__c</referenceTo>
    <relationshipLabel>zip code assigment</relationshipLabel>
    <relationshipName>zip_code_assigment</relationshipName>
    <type>Lookup</type>
</CustomField>